--- a/mars oddessy GUI visualbasic .net/mars oddessy/mars oddessy.vbproj
+++ b/mars oddessy GUI visualbasic .net/mars oddessy/mars oddessy.vbproj
@@ -125,6 +125,9 @@
   <ItemGroup>
     <None Include="Resources\firetruck.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\divider - Copy.bmp" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
